welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: value or is not a member of Boolean
  if (a+b == 10 or b+c == 10 || a+c == 10){
                ^