welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = {
  if (a+b == 10 or b+c == 10 || a+c == 10){
    return 10;
  }
  else{
  	if (a+b == 10 + b+c + a+c){
      return 5;
    }  
  }
  return 0
}